--- a/test_flow.ipynb
+++ b/test_flow.ipynb
@@ -292,6 +292,47 @@
       "rows 10688109, stage table size: 829.335937\n",
       "- EXEC dbo.MergeData_PeopleBasic_Professional2_prc...\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 93%|█████████▎| 13/14 [39:28<02:21, 141.83s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  - duration 01:30\n",
+      "flow for target entity CompanyNames_NativeCompanyName..\n",
+      "- EXEC dbo.PullData_CompanyNames_NativeCompanyName2_prc...\n",
+      "  - duration 2.51\n",
+      "rows 285343, stage table size: 36.453125\n",
+      "- EXEC dbo.MergeData_CompanyNames_NativeCompanyName2_prc...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14/14 [39:32<00:00, 169.43s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  - duration 1.39\n",
+      "done\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -351,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9e97f970",
    "metadata": {},
    "outputs": [
@@ -389,38 +430,182 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>CompanyRel_CompanyRel2</td>\n",
-       "      <td>31.78</td>\n",
-       "      <td>01:01</td>\n",
-       "      <td>01:33</td>\n",
+       "      <td>01:30</td>\n",
+       "      <td>01:00</td>\n",
+       "      <td>02:30</td>\n",
        "      <td>13406.76</td>\n",
        "      <td>653.20</td>\n",
-       "      <td>6.98</td>\n",
+       "      <td>4.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Competitors_Competitors2</td>\n",
-       "      <td>2.65</td>\n",
-       "      <td>4.25</td>\n",
-       "      <td>6.90</td>\n",
+       "      <td>2.58</td>\n",
+       "      <td>4.28</td>\n",
+       "      <td>6.85</td>\n",
        "      <td>920.34</td>\n",
        "      <td>31.45</td>\n",
-       "      <td>4.56</td>\n",
+       "      <td>4.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Competitors_CompetitorToSource2</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>920.39</td>\n",
+       "      <td>31.45</td>\n",
+       "      <td>4.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PeopleBasic_Person2</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td>41.13</td>\n",
+       "      <td>01:08</td>\n",
+       "      <td>5959.98</td>\n",
+       "      <td>321.14</td>\n",
+       "      <td>4.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PeopleBasic_ProToProFunction2</td>\n",
+       "      <td>01:36</td>\n",
+       "      <td>02:37</td>\n",
+       "      <td>04:14</td>\n",
+       "      <td>15095.86</td>\n",
+       "      <td>939.70</td>\n",
+       "      <td>3.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CompanyNames_AlternateCompanyName2</td>\n",
+       "      <td>15.14</td>\n",
+       "      <td>13.69</td>\n",
+       "      <td>28.83</td>\n",
+       "      <td>2676.60</td>\n",
+       "      <td>202.70</td>\n",
+       "      <td>7.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CompanyNames_SearchCompanyName2</td>\n",
+       "      <td>11:27</td>\n",
+       "      <td>14:31</td>\n",
+       "      <td>25:59</td>\n",
+       "      <td>161240.44</td>\n",
+       "      <td>10684.40</td>\n",
+       "      <td>6.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>KeyDocument_KeyDocumentToSecurity2</td>\n",
+       "      <td>13.12</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>14.51</td>\n",
+       "      <td>886.61</td>\n",
+       "      <td>79.14</td>\n",
+       "      <td>5.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>FinAuditor_FinancialToAdvisor2</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>6.67</td>\n",
+       "      <td>9.87</td>\n",
+       "      <td>1229.24</td>\n",
+       "      <td>47.95</td>\n",
+       "      <td>4.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>BusinessRel_BusinessRel2</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>47.95</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Product_Product2</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>47.95</td>\n",
+       "      <td>1284.50</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>KeyDocument_KeyDocument2</td>\n",
+       "      <td>50.02</td>\n",
+       "      <td>36.53</td>\n",
+       "      <td>01:26</td>\n",
+       "      <td>2713.79</td>\n",
+       "      <td>439.52</td>\n",
+       "      <td>5.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PeopleBasic_Professional2</td>\n",
+       "      <td>01:17</td>\n",
+       "      <td>01:30</td>\n",
+       "      <td>02:48</td>\n",
+       "      <td>10688.11</td>\n",
+       "      <td>829.34</td>\n",
+       "      <td>4.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>CompanyNames_NativeCompanyName2</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>285.34</td>\n",
+       "      <td>36.45</td>\n",
+       "      <td>9.34</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Entity name Pull SP Merge SP    sum rows_count, K  \\\n",
-       "0    CompanyRel_CompanyRel2   31.78    01:01  01:33      13406.76   \n",
-       "1  Competitors_Competitors2    2.65     4.25   6.90        920.34   \n",
+       "                           Entity name  Pull SP Merge SP      sum  \\\n",
+       "0               CompanyRel_CompanyRel2    01:30    01:00    02:30   \n",
+       "1             Competitors_Competitors2     2.58     4.28     6.85   \n",
+       "2      Competitors_CompetitorToSource2     3.00     4.35     7.34   \n",
+       "3                  PeopleBasic_Person2    27.25    41.13    01:08   \n",
+       "4        PeopleBasic_ProToProFunction2    01:36    02:37    04:14   \n",
+       "5   CompanyNames_AlternateCompanyName2    15.14    13.69    28.83   \n",
+       "6      CompanyNames_SearchCompanyName2    11:27    14:31    25:59   \n",
+       "7   KeyDocument_KeyDocumentToSecurity2    13.12     1.39    14.51   \n",
+       "8       FinAuditor_FinancialToAdvisor2     3.20     6.67     9.87   \n",
+       "9             BusinessRel_BusinessRel2     1.23    47.95     0.00   \n",
+       "10                    Product_Product2     0.04     0.04     0.00   \n",
+       "11            KeyDocument_KeyDocument2    50.02    36.53    01:26   \n",
+       "12           PeopleBasic_Professional2    01:17    01:30    02:48   \n",
+       "13     CompanyNames_NativeCompanyName2     2.51     1.39     3.90   \n",
        "\n",
-       "  table_size, MB velocity, MB/sec  \n",
-       "0         653.20             6.98  \n",
-       "1          31.45             4.56  "
+       "   rows_count, K table_size, MB velocity, MB/sec  \n",
+       "0       13406.76         653.20             4.33  \n",
+       "1         920.34          31.45             4.59  \n",
+       "2         920.39          31.45             4.28  \n",
+       "3        5959.98         321.14             4.70  \n",
+       "4       15095.86         939.70             3.69  \n",
+       "5        2676.60         202.70             7.03  \n",
+       "6      161240.44       10684.40             6.85  \n",
+       "7         886.61          79.14             5.45  \n",
+       "8        1229.24          47.95             4.86  \n",
+       "9           None           None             None  \n",
+       "10         47.95        1284.50             None  \n",
+       "11       2713.79         439.52             5.08  \n",
+       "12      10688.11         829.34             4.93  \n",
+       "13        285.34          36.45             9.34  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
